--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Written by:
                   <p class="card-text">OSS governance: implications for building OSS communities. <br/> &nbsp; </p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a class="btn btn-sm btn-outline-secondary" href="#" onclick="warn()">Enter</a> 
+                      <a class="btn btn-sm btn-outline-secondary" href="com_oss.html" onclick="warn()">Enter</a> 
                     </div>
                     <small class="text-muted"></small>
                   </div>
