--- a/AI_service_en.html
+++ b/AI_service_en.html
@@ -10,7 +10,7 @@ Written by:
 
       <section class="jumbotron text-center">
         <div class="container" style="max-width:800px">
-          <h1 class="jumbotron-heading" style="margin-bottom:30px">AI项目分类</h1>
+          <h1 class="jumbotron-heading" style="margin-bottom:30px">AI Software Classification</h1>
           <p class="lead text-muted" style="font-size: 19px; text-align: left; margin-top:50px">
           Motivation: AI, especially deep learning, is very popular in research area and job market. Many researches and studies devote to developing new
           neural network architectures and to making AI application development easier. However, there is little knowledge about
@@ -150,7 +150,7 @@ Written by:
           
           <p class="lead text-muted" style="font-size: 19px; text-align: left; margin-top:5px"> More details:
           <a href="https://bitbucket.org/swsc/overview/src/master/">full description</a> </p>
-          <p class="lead text-muted" style="font-size: 16px; margin-top:50px">论文: </p>
+          <p class="lead text-muted" style="font-size: 16px; margin-top:50px">Papers: </p>
           <p class="lead text-muted" style="font-size: 16px; font-style:italic; text-align: left">
           Ma Y, Bogart C, Amreen S, et al. World of code: an infrastructure for mining the universe of open source VCS data. 
           Proceedings of the 16th International Conference on Mining Software Repositories. IEEE Press, 2019: 143-154.
