--- a/case_1_en.html
+++ b/case_1_en.html
@@ -10,7 +10,7 @@ Written by:
 
       <section class="jumbotron text-center">
         <div class="container" style="max-width:800px">
-          <h1 class="jumbotron-heading" style="margin-bottom:30px">开源贡献者的留存</h1>
+          <h1 class="jumbotron-heading" style="margin-bottom:30px">Stay of OSS Contributors</h1>
           <p class="lead text-muted" style="font-size: 19px; text-align: left; margin-top:50px">
           Motivation: To survive and succeed, FLOSS projects need contributors able to accomplish critical project tasks.
           However, such tasks require extensive project experience of long term contributors (LTCs).
@@ -43,7 +43,7 @@ Written by:
           <a href="https://zenodo.org/record/971162/files/gnome.zip">gnome.zip</a> &nbsp;&nbsp;&nbsp;&nbsp;
           <a href="https://zenodo.org/record/971162/files/mozilla.zip">mozilla.zip</a>
           </p>
-          <p class="lead text-muted" style="font-size: 16px; margin-top:50px">论文: </p>
+          <p class="lead text-muted" style="font-size: 16px; margin-top:50px">Papers: </p>
           <p class="lead text-muted" style="font-size: 16px; font-style:italic; text-align: left">
           Minghui Zhou, Audris Mockus: Who Will Stay in the FLOSS Community? Modeling Participant's Initial Behavior.
           IEEE Transactions on Software Engineering, vol.41, no.1, pp.82-99, Jan. 1 2015.
@@ -54,4 +54,4 @@ Written by:
           </p>
         </div>
       </section>
-<script src='js/footer.js'></script>
+<script src='js/footer_en.js'></script>
