--- a/case_2_en.html
+++ b/case_2_en.html
@@ -10,7 +10,7 @@ Written by:
 
       <section class="jumbotron text-center">
         <div class="container" style="max-width:800px">
-          <h1 class="jumbotron-heading" style="margin-bottom:30px">Linux内核维护</h1>
+          <h1 class="jumbotron-heading" style="margin-bottom:30px">Linux Kernel Maintenance</h1>
           <p class="lead text-muted" style="font-size: 19px; text-align: left; margin-top:50px">
           Open source software ecosystems evolve ways to balance the workload among groups of participants ranging from
           core groups to peripheral groups.
@@ -42,7 +42,7 @@ Written by:
           <a href="https://zenodo.org/record/1165576/files/level-0.zip">level0.zip</a> &nbsp;&nbsp;&nbsp;&nbsp;
           <a href="https://zenodo.org/record/1165576/files/level-1%20and%20level-2.7z">level1&2.7z</a>
           </p>
-          <p class="lead text-muted" style="font-size: 16px; margin-top:50px">论文: </p>
+          <p class="lead text-muted" style="font-size: 16px; margin-top:50px">Paper: </p>
           <p class="lead text-muted" style="font-size: 16px; font-style:italic; text-align: left">
           Minghui Zhou, Qingying Chen, Audris Mockus, and Fengguang Wu. 2017. On the scalability of Linux kernel maintainers' work.
           In Proceedings of the 2017 11th Joint Meeting on Foundations of Software Engineering (ESEC/FSE 2017). ACM, New York, NY, USA, 27-37.
@@ -53,4 +53,4 @@ Written by:
           </p>
         </div>
       </section>
-<script src='js/footer.js'></script>
+<script src='js/footer_en.js'></script>
