--- a/cases_en.html
+++ b/cases_en.html
@@ -10,9 +10,9 @@ Written by:
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">成功案例</h1>
-          <p class="lead text-muted">这里展示了使用本系统中数据完成的若干学术研究。</p>
-          <p class="lead text-muted">每个案例展示了研究的问题、使用的数据和数据用法。</p>
+          <h1 class="jumbotron-heading">Successful Cases</h1>
+          <p class="lead text-muted">Here are the studies using the data included in OSSDatahouse.</p>
+          <p class="lead text-muted">Each case includes the story of the study, used dataset and usage of the data.</p>
         </div>
       </section>
 
@@ -22,12 +22,12 @@ Written by:
           <div class="row">
             <div class="col-md-6">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=开源贡献者的留存" alt="开源贡献者的留存">
+                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Stay of OSS contributors" alt="Stay of OSS contributor">
                 <div class="card-body">
                   <p class="card-text"></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a class="btn btn-sm btn-outline-secondary" href="case_1.html">进入</a> 
+                      <a class="btn btn-sm btn-outline-secondary" href="case_1_en.html">Enter</a> 
                     </div>
                     <small class="text-muted"></small>
                   </div>
@@ -36,12 +36,12 @@ Written by:
             </div>
             <div class="col-md-6">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Linux内核维护" alt="Linux内核维护">
+                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Linux Kernel maintenance" alt="Linux Kernel maintenance">
                 <div class="card-body">
                   <p class="card-text"></p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a class="btn btn-sm btn-outline-secondary" href="case_2.html">进入</a>  
+                      <a class="btn btn-sm btn-outline-secondary" href="case_2_en.html">Enter</a>  
                     </div>
                     <small class="text-muted"></small>
                   </div>
@@ -55,4 +55,4 @@ Written by:
 
     </main>
 
-<script src='js/footer.js'></script>
+<script src='js/footer_en.js'></script>
