--- a/com_oss_en.html
+++ b/com_oss_en.html
@@ -3,7 +3,7 @@
 
       <section class="jumbotron text-center">
         <div class="container" style="max-width:800px">
-          <h1 class="jumbotron-heading" style="margin-bottom:30px">开源生态中的商业参与</h1>
+          <h1 class="jumbotron-heading" style="margin-bottom:30px">Commercial Participation in OSS Ecosystems</h1>
           <p class="lead text-muted" style="font-size: 19px; text-align: left; margin-top:50px">
           Commercial participation continues to grow in open source software (OSS) projects and novel arrangements appear to emerge in company-dominated projects and ecosystems. What is the nature of these novel arrangements? Despite extensive research on commercial participation in OSS, the exact nature and extent of company contributions to development has not been clarified. To brige the gap, We provide a dashboard that can be used to extract commercial contribution model. First, we quantify companies' contributions to via the developers that they provide and the commits made by those developers. Second, we define four dimensions that can characterize commercial participation in OSS, i.e., commercial objectives, and contribution intensity, extent, and focus. Our dashboard can improve the understanding of the nature and extent of commercial participation in company-dominated OSS ecosystems, and provides a basis to further explore the effects of commercial participation to the health of OSS ecosystem.
           </p>
@@ -27,10 +27,10 @@
           <p class="lead text-muted" style="font-size: 19px; text-align: left; margin-top:5px"> Download:
           <a href="https://github.com/noname2018/Dataset-of-Company-Participation-in-OpenStack">Dataset</a> 
           </p>
-          <p class="lead text-muted" style="font-size: 16px; margin-top:50px">论文: </p>
+          <p class="lead text-muted" style="font-size: 16px; margin-top:50px">Papers: </p>
           <p class="lead text-muted" style="font-size: 16px; font-style:italic; text-align: left">
           Zhang Y, Tan X, Zhou M, et al. Companies' domination in FLOSS development: an empirical study of OpenStack[C]//Proceedings of the 40th International Conference on Software Engineering: Companion Proceeedings. ACM, 2018: 440-441.
           </p>
         </div>
       </section>
-<script src='js/footer.js'></script>
+<script src='js/footer_en.js'></script>
