--- a/dataset_other_p1_en.html
+++ b/dataset_other_p1_en.html
@@ -14,7 +14,7 @@ Written by:
         <div class="col-md-3">
           <div class="card my-4">
             <div class="card-header">
-                数据类型
+                Data Types
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><input type="checkbox"> VCS(0) </li> 
@@ -24,7 +24,7 @@ Written by:
           </div>
           <div class="card my-4">
             <div class="card-header">
-                数据规模
+                Data Sizes
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><input type="checkbox"> &lt;=500M(8) </li> 
@@ -34,7 +34,7 @@ Written by:
           </div>
           <div class="card my-4">
             <div class="card-header">
-                流行度
+                Popularity
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><input type="checkbox"> &lt;=100(40) </li> 
@@ -49,7 +49,7 @@ Written by:
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/777372">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/777372">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -74,7 +74,7 @@ Written by:
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/2574213">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/2574213">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -100,7 +100,7 @@ Sampling of Kconfig System Configurations/", submitted to ESEC//FSE 2019
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/758309">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/758309">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -141,7 +141,7 @@ size of the CSS files and increase the maintainability of the code.
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/2573334">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/2573334">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -169,7 +169,7 @@ process those results.
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/1300349">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/1300349">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -206,7 +206,7 @@ paper using PyDriller and GitPython in 50 OSS projects. It also contains
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/656932">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/656932">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -241,7 +241,7 @@ research,/” in ESEC//FSE. ACM, 2013, pp. 466/–476.
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/818276">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/818276">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -309,7 +309,7 @@ authors.
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/786645">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/786645">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -355,7 +355,7 @@ the responses/&lt;br ///&gt;
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/2584265">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/2584265">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -410,7 +410,7 @@ two files:- List of References /(SASO - References -
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/1491223">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/1491223">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -1358,4 +1358,4 @@ the references used to extract the phenology data.
   </section>
 </main>
 
-<script src='js/footer.js'></script>
+<script src='js/footer_en.js'></script>
