--- a/dataset_other_p2_en.html
+++ b/dataset_other_p2_en.html
@@ -14,7 +14,7 @@ Written by:
         <div class="col-md-3">
           <div class="card my-4">
             <div class="card-header">
-                数据类型
+                Data Types
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><input type="checkbox"> VCS(0) </li> 
@@ -24,7 +24,7 @@ Written by:
           </div>
           <div class="card my-4">
             <div class="card-header">
-                数据规模
+                Data Sizes
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><input type="checkbox"> &lt;=500M(8) </li> 
@@ -34,7 +34,7 @@ Written by:
           </div>
           <div class="card my-4">
             <div class="card-header">
-                流行度
+                Popularity
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><input type="checkbox"> &lt;=100(40) </li> 
@@ -49,7 +49,7 @@ Written by:
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/758151">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/758151">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -145,7 +145,7 @@ in the Eclipse Platform and Tomcat projects.
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/1297982">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/1297982">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -285,7 +285,7 @@ process takes at least 16Gb of RAM and takes few hours to run due to the
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/631041">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/631041">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -405,7 +405,7 @@ posted on:/&nbsp;http:////www.ismrm.org//mri/_unbound//simulated.htm
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/1297924">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/1297924">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -543,7 +543,7 @@ process takes at least 16Gb of RAM and takes few hours to run due to the
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/1112341">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/1112341">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -674,7 +674,7 @@ the frequency of a taxon in its habitat; it is negatve when the taxon is
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/591638">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/591638">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -710,7 +710,7 @@ International Conference on Software Engineering, 2016.
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/2566031">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/2566031">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -761,7 +761,7 @@ available/&nbsp;here.
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/2550767">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/2550767">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -797,7 +797,7 @@ Alrasheed, and Maletic
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/2578295">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/2578295">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -825,7 +825,7 @@ LICENSE.md/&nbsp;file for licensing information./&nbsp;
           <div class="row">     
             <div class="col-md-12">
               <div class="float-right">
-                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/2550682">查看</a>
+                 <a class="btn btn-outline-secondary btn-sm" href="https://zenodo.org/record/2550682">View</a>
                </div>
             </div>
             <div class="w"></div>
@@ -936,4 +936,4 @@ links in source code comments for further software engineering research.
   </section>
 </main>
 
-<script src='js/footer.js'></script>
+<script src='js/footer_en.js'></script>
