--- a/dataset_other_p4_en.html
+++ b/dataset_other_p4_en.html
@@ -14,7 +14,7 @@ Written by:
         <div class="col-md-3">
           <div class="card my-4">
             <div class="card-header">
-                数据类型
+                Data Types
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><input type="checkbox"> VCS(0) </li> 
@@ -24,7 +24,7 @@ Written by:
           </div>
           <div class="card my-4">
             <div class="card-header">
-                数据规模
+                Data Sizes
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><input type="checkbox"> &lt;=500M(8) </li> 
@@ -34,7 +34,7 @@ Written by:
           </div>
           <div class="card my-4">
             <div class="card-header">
-                流行度
+                Popularity
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><input type="checkbox"> &lt;=100(40) </li> 
@@ -692,4 +692,4 @@ The results show the effectiveness of our method.
   </section>
 </main>
 
-<script src='js/footer.js'></script>
+<script src='js/footer_en.js'></script>
