--- a/index_en.html
+++ b/index_en.html
@@ -13,26 +13,26 @@ Written by:
         <div class="container">
 
           <h1 class="jumbotron-heading"><img src="img/logo.png" width="12%"> OpenDatahouse</h1>
-          <p class="lead text-muted">本系统提供以开源软件数据服务为主的数据服务。您可以在这里获取多种软件开发过程中产生的原始数据和加工后的数据。</p>
+          <p class="lead text-muted">This is a datahouse of open-source software data. You can find different kinds of data produced during the development of varies open-source software projects.</p>
           <p>
-            <a href="overview.html" class="btn btn-secondary my-2">数据概览</a>
-            <a href="cases.html" class="btn btn-primary my-2">成功案例</a>
+            <a href="overview_en.html" class="btn btn-secondary my-2">Overview of the data</a>
+            <a href="cases_en.html" class="btn btn-primary my-2">Successful cases</a>
           </p>
         </div>
       </section>
 
       <div class="album py-5 bg-light">
         <div class="container">
-        <h3>数据类型</h3>
+        <h3>Data of Different Types</h3>
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=邮件数据" alt="邮件数据">
+                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Mailinglist data" alt="Mailinglist data">
                 <div class="card-body">
-                  <p class="card-text">邮件数据: 开发者讨论的邮件会话。<br/> &nbsp; </p>
+                  <p class="card-text">Mailinglist data: email threads where OSS participants discuss the development. <br/> &nbsp; </p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a class="btn btn-sm btn-outline-secondary" onclick="warn()">进入</a> 
+                      <a class="btn btn-sm btn-outline-secondary" onclick="warn()">Enter</a> 
                     </div>
                     <small class="text-muted"></small>
                   </div>
@@ -41,12 +41,12 @@ Written by:
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=问题追踪数据" alt="问题追踪数据">
+                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Issue tracker data" alt="Issue tracker data">
                 <div class="card-body">
-                  <p class="card-text">问题追踪数据: 开发者和用户报告的软件缺陷、新特性请求等处理记录。</p>
+                  <p class="card-text">Issue tracker data: issue tickets where OSS participants report and resolve issues including bugs, feature requests, etc.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a class="btn btn-sm btn-outline-secondary"  onclick="warn()">进入</a>  
+                      <a class="btn btn-sm btn-outline-secondary"  onclick="warn()">Enter</a>  
                     </div>
                     <small class="text-muted"></small>
                   </div>
@@ -55,12 +55,12 @@ Written by:
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=代码仓库数据" alt="代码仓库数据">
+                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Code repository data" alt="Code repository data">
                 <div class="card-body">
-                  <p class="card-text">代码仓库数据: 开发者所做的代码变更历史。</p>
+                  <p class="card-text">Code repository data: version control commits where OSS developers make changes to the code.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a class="btn btn-sm btn-outline-secondary"  onclick="warn()">进入</a>  
+                      <a class="btn btn-sm btn-outline-secondary"  onclick="warn()">Enter</a>  
                     </div>
                     <small class="text-muted"></small>
                   </div>
@@ -72,16 +72,16 @@ Written by:
 
 
         <div class="container">
-          <h3>典型数据</h3>
+          <h3>Typical Datasets</h3>
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=本地数据" alt="Our datasets">
+                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Our datasets" alt="Our datasets">
                 <div class="card-body">
-                  <p class="card-text">本地数据: 存放在本系统中的数据。 <br/> &nbsp; </p>
+                  <p class="card-text">Our datasets: the data owned by us. <br/> &nbsp; </p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a class="btn btn-sm btn-outline-secondary" href="dataset_self_p1.html">进入</a> 
+                      <a class="btn btn-sm btn-outline-secondary" href="dataset_self_p1_en.html">Enter</a> 
                     </div>
                     <small class="text-muted"></small>
                   </div>
@@ -90,12 +90,12 @@ Written by:
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=索引的数据" alt="Tracked datasets">
+                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Tracked datasets" alt="Tracked datasets">
                 <div class="card-body">
-                  <p class="card-text">索引的数据: 存储在系统外，被系统索引的数据。</p>
+                  <p class="card-text">Tracked datasets: others' data tracked by us.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a class="btn btn-sm btn-outline-secondary" href="dataset_other_p1.html">进入</a>  
+                      <a class="btn btn-sm btn-outline-secondary" href="dataset_other_p1_en.html">Enter</a>  
                     </div>
                     <small class="text-muted"></small>
                   </div>
@@ -106,16 +106,16 @@ Written by:
         </div>
 
         <div class="container">
-          <h3>高级数据服务</h3>
+          <h3>Advanced Data Services</h3>
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=开源治理" alt="开源治理">
+                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=OSS Governance" alt="OSS Governance">
                 <div class="card-body">
-                  <p class="card-text">开源治理: 构建开源社区的启示。 <br/> &nbsp; </p>
+                  <p class="card-text">OSS governance: implications for building OSS communities. <br/> &nbsp; </p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a class="btn btn-sm btn-outline-secondary" href="com_oss.html">进入</a> 
+                      <a class="btn btn-sm btn-outline-secondary" href="com_oss_en.html">Enter</a> 
                     </div>
                     <small class="text-muted"></small>
                   </div>
@@ -124,12 +124,12 @@ Written by:
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=AI项目探索" alt="AI项目探索">
+                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=AI Projects Explorer" alt="AI Projects Explorer">
                 <div class="card-body">
-                  <p class="card-text">AI项目探索: 发现您感兴趣的AI项目 <br/> &nbsp; </p>
+                  <p class="card-text">AI projects explorer: find the AI projects you are interested in. <br/> &nbsp; </p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a class="btn btn-sm btn-outline-secondary" href="AI_service.html">进入</a> 
+                      <a class="btn btn-sm btn-outline-secondary" href="AI_service_en.html">Enter</a> 
                     </div>
                     <small class="text-muted"></small>
                   </div>
@@ -142,4 +142,4 @@ Written by:
 
     </main>
 
-<script src='js/footer.js'></script>
+<script src='js/footer_en.js'></script>
