--- a/overview_en.html
+++ b/overview_en.html
@@ -9,7 +9,7 @@ Written by:
      <div id="header"></div>
       <section class="jumbotron text-center">
         <div class="container" style="max-width:800px">
-          <h1 class="jumbotron-heading" style="margin-bottom:30px">数据概览</h1>
+          <h1 class="jumbotron-heading" style="margin-bottom:30px">Overview of OSSDatahouse</h1>
           <p></p>
           <p></p>
           <img src="img/multi_levels.jpg" width="80%">
@@ -29,7 +29,7 @@ Written by:
           event).
           We have built several datasets with this method and applied the datasets to several published studies.
           </p>
-          <p class="lead text-muted" style="font-size: 16px; margin-top:50px">论文: </p>
+          <p class="lead text-muted" style="font-size: 16px; margin-top:50px">Paper: </p>
           <p class="lead text-muted" style="font-size: 16px; font-style:italic; text-align: left">
           Jiaxin Zhu, Minghui Zhou, and Hong Mei. Multi-extract and multi-level dataset of mozilla issue tracking history.
           In Proceedings of the 13th International Conference on Mining Software Repositories (MSR '16). ACM, New York, NY, USA, 472-475.
@@ -37,5 +37,5 @@ Written by:
         </div>
       </section>
       <div id="footer"></div>
-<script src='js/footer.js'></script>
+<script src='js/footer_en.js'></script>
 
