--- a/overview.html
+++ b/overview.html
@@ -16,18 +16,7 @@ Written by:
           <hr style="border:1px dotted #036" />
           <img src="img/muilti_extracts.jpg" width="71%">
           <p class="lead text-muted" style="font-size: 19px; text-align: left; margin-top:50px">
-          To facilitate the analyses of OSS data, we organize our data with multiple extracts and multiple levels.
-          The extracts are retrieved through different channels, e.g., front-ends (web user interface (UI)) and back-ends
-          (official database dump) of the development supporting tools, e.g., issue tracker at three different times.
-          The variations (dynamics) among extracts provide space for researchers to reproduce and validate their studies,
-          while revealing potential opportunities for studies that otherwise could not be conducted.
-          We provide different data levels for each extract ranging from raw data to standardized data as well as to the
-          calculated data level for targeting specific research questions.
-          Data retrieving and processing scripts related to each data level are offered too.
-          By employing the multi-level structure, analysts can more efficiently start an inquiry from the standardized level
-          and easily trace the data chain when necessary (e.g., to verify if a phenomenon reflected by the data is an actual
-          event).
-          We have built several datasets with this method and applied the datasets to several published studies.
+          现有软件开发活动数据集的构建过程可追溯性差、适用范围窄,对数据随时间、环境发生的变化欠考虑。这些不足直接威胁数据的质量及分析结果的有效性.针对该问题,提出一种层次化、多版本化的方法来构建与使用软件开发活动数据集。层次化是指在数据集中包括收集和后续处理所得的原始、中间和最终数据,建立数据集的可追溯性并扩展其适用范围。多版本化是指通过多种方式进行多次数据收集，使数据使用者能够观察到数据的变化，为数据质量及分析结果有效性的验证和提高创造条件。我们基于该方法构建了Mozilla问题追踪数据集。该数据集已经应用于多项研究工作中。
           </p>
           <p class="lead text-muted" style="font-size: 16px; margin-top:50px">论文: </p>
           <p class="lead text-muted" style="font-size: 16px; font-style:italic; text-align: left">
